examples/valid/arithmetic.mini
2+3
2+3*4
(2+3)*4
pow(2,3)
2+pow(2,3)*(1+1)
-5+3
pow(-2,3)
pow(2,pow(3,2))
