examples/invalid/pow_zero_negative2.mini
# Семантическая ошибка: 0 в отрицательной степени
pow(0, -5)
